# SSRS

./: .gitignore  README.md  requeriments.txt
src/: config.py
src/app/: gui.py  main_window.py  mount_dialog.py  search_dialog.py
src/app/glade/: main_window.glade
src/client/: __init__.py  __main__.py
src/client/dsfs/: .gitignore  CMakeLists.txt  config.h.cmake
src/client/dsfs/src/: context.cpp  context.h  event.cpp  event.h  main.cpp  operations.h
src/client/gui/: Manage.py  add_dialog.py  main_window.py  search_dialog.py
src/client/index/: PersistentFilter.py  tools.py
src/client/sync/: event.py  network.py  state.py  sync.py
src/dsfs/src/: event.cpp  event.h  main.cpp  operations.cpp
src/gui/: Manage.py  __init__.py  add_dialog.py  main_window.py  search_dialog.py
src/index/: Extractor.py  Filter.py  PersistentFilter.py  Query.py  QueryFilter.py  main.py  mineirinho.py  requirements.txt  tools.py
src/index/stopwords/: pt-br
src/server/: QueryFilter.py  __init__.py  __main__.py  main.py  search.py  storage.py
src/sync/: event.py  file.py  network.py  state.py  sync.py
testes/: graph.py  ten_thousand.txt  test_index.py
testes/may2018/index/: resultados.ods  resultados2.ods  resultados2.xlsx  resultados_6000_1.xlsx  results.txt  results1.txt  results2.txt  results3.txt  results4.txt  results5.txt  test_index.py
testes/may2018/query/: resultados_consulta.ods  resultados_consulta_2.ods  resultados_consulta_3.ods  resultados_consulta_3.xlsx  results_consulta_2.txt  (+5 more)
testes/nov2017/: linear_regression_plot.py
testes/txts/: five_thousand.txt
(+9 files in other folders)
